--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 EMAIL_USER=your-email@gmail.com
 EMAIL_PASS=your-app-password
 PORT=3000
+ADMIN_PASSWORD=admin123
+MONGODB_URI=mongodb+srv://user:pass@cluster.mongodb.net/nova_nataka?retryWrites=true&w=majority
