--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "mongoose": "^9.2.1",
     "nodemailer": "^6.9.13",
     "xlsx": "^0.18.5"
   },
