--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/server.js"
+            "destination": "/api"
         },
         {
             "source": "/admin/(.*)",
-            "destination": "/server.js"
+            "destination": "/api"
         }
     ]
 }
